test/unittest/error/tst.errorend.d
/*
 * Oracle Linux DTrace.
 * Copyright (c) 2006, 2020, Oracle and/or its affiliates. All rights reserved.
 * Licensed under the Universal Permissive License v 1.0 as shown at
 * http://oss.oracle.com/licenses/upl.
 */
/* @@xfail: dtv2 */

/*
 * ASSERTION:
 *	Flow of ERROR probe
 *
 * SECTION: dtrace Provider
 *
 */


#pragma D option quiet

ERROR
{
	printf("Error fired\n");
	exit(0);
}

END
{
	printf("End fired after exit\n");
}

BEGIN
{
	*(char *)NULL;
}
